--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
+    "vite-plugin-pwa": "^0.12.7",
     "vue-tsc": "^0.40.7"
   }
 }
