--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
