--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dashboard",
-  "version": "0.0.0",
+  "name": "nitride",
+  "version": "0.09.22",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
