--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vite-plugin-pwa": "^0.12.8",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^0.40.7",
+    "workbox-precaching": "^6.5.4"
   }
 }
