--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,34 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue"
+    
+  ],
+"files": [
+  "node_modules/vite-plugin-pwa/client.d.ts"
+],
+  "exclude": [
+    "dist",
+    "test",
+    "test.ts",
+    "**/*.spec.ts",
+    "**/*.worker.ts"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "lib": [
+      "ESNext",
+      "DOM",
+      "WebWorker"
+    ]
   },
-
   "references": [
     {
       "path": "./tsconfig.config.json"
