--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@iconify/vue": "^4.0.0",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.56",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^16.11.59",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "dotenv": "^16.0.2",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
