--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "nitride",
   "version": "0.09.22",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "dev": "vite",
+    "preview": "vite preview --port 4173",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "pinia": "^2.0.21",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.38",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^4.1.5"
@@ -23,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/node": "^16.11.59",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
