--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "run-p type-check build-only",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "build-only": "vite build",
+    "build:ssr": "vite build --outDir ../nitride/views  --emptyOutDir",
     "dev": "vite",
     "preview": "vite preview --port 4173",
     "type-check": "vue-tsc --noEmit"
@@ -34,6 +35,7 @@
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
+    "vite-plugin-pwa": "^0.13.1",
     "vue-tsc": "^0.40.7",
     "workbox-precaching": "^6.5.4"
   }
