--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "epic-spinners": "^1.1.0",
     "pinia": "^2.0.21",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.38",
