--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.38",
     "vue-chartjs": "^4.1.1",
+    "vue-pwa-install": "^1.1.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
