--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,63 @@
 {
-    "name": "nitride",
+    "name": "nitride ttx",
     "short_name": "nitride",
-    "start_url": "/",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "lang": "en",
     "scope": "/",
-    "description": "a compound of nitrogen",
+    "description": "an admin dashboard built on vue, Rust, Typescript and Postgres",
     "theme_color": "#ffffff",
     "icons": [
         {
-            "src": "src/assets/favicon/android-chrome-192x192.png",
+            "src": "icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable any"
         },
         {
-            "src": "src/assets/favicon/android-chrome-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "src": "icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "purpose": "maskable any"
         },
         {
-            "src": "src/assets/favicon/android-chrome-512x512.png",
+            "src": "icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "maskable any"
         }
-    ]
+    ],
+    "prefer_related_applications": false,
+    "orientation": "portrait"
 }
