--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,8 +20,18 @@
             "type": "image/png"
         },
         {
-            "src": "favicon/android-chrome-512x512.png",
-            "sizes": "512x512",
+            "src": "favicon/favicon-32x32.png",
+            "sizes": "32x32",
+            "type": "image/png"
+        },
+        {
+            "src": "favicon/favicon-16x16.png",
+            "sizes": "16x16",
+            "type": "image/png"
+        },
+        {
+            "src": "favicon/icon-72x72.png",
+            "sizes": "72x72",
             "type": "image/png",
             "purpose": "any maskable"
         }
