--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,11 @@
     "short_name": "nitride",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#101010",
     "lang": "en",
     "scope": "/",
     "description": "an admin dashboard built on vue, Rust, Typescript and Postgres",
-    "theme_color": "#ffffff",
+    "theme_color": "#101010",
     "icons": [
         {
             "src": "favicon/android-chrome-192x192.png",
@@ -32,11 +32,12 @@
         {
             "src": "favicon/icon-2x72.png",
             "sizes": "72x72",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
-        {
-            "src": "favicon/icon-32x32.png",
-            "sizes": "32x32",
+          {
+            "src": "favicon/icon-2x72.png",
+            "sizes": "72x72",
             "type": "image/png",
             "purpose": "any maskable"
         }
