--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
     "lang": "en",
     "scope": "/",
     "description": "an admin dashboard built on vue, Rust, Typescript and Postgres",
-    "theme_color": "#ffffff",
+    "theme_color": "#101010",
     "icons": [
         {
             "src": "favicon/android-chrome-192x192.png",
