--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,23 +10,23 @@
     "theme_color": "#101010",
     "icons": [
         {
-            "src": "favicon/android-chrome-512x512.png",
+            "src": "pwa/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "favicon/android-chrome-192x192.png",
+            "src": "pwa/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "favicon/favicon-32x32.png",
+            "src": "pwa/favicon-32x32.png",
             "sizes": "32x32",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "favicon/favicon-16x16.png",
+            "src": "pwa/favicon-16x16.png",
             "sizes": "16x16",
             "type": "image/png"
         }
