--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.5.6",
+    "@vueform/toggle": "^2.1.2",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "epic-spinners": "^1.1.0",
