--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@vueform/toggle": "^2.1.2",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
-    "epic-spinners": "^1.1.0",
     "pinia": "^2.0.21",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.38",
     "vue-chartjs": "^4.1.1",
+    "vue-easy-spinner": "^0.1.0",
     "vue-pwa-install": "^1.1.0",
     "vue-router": "^4.1.5"
   },
