--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-chartjs": "^4.1.1",
     "vue-easy-spinner": "^0.1.0",
     "vue-pwa-install": "^1.1.0",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.0.0",
