--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,10 +17,7 @@ jobs:
           node-version: 18.x
 
       - name: Install
-        run: npm ci
-
-      - name: Test
-        run: npm run test
+        run: npm install
 
       - name: Build
         run: npm run build
