--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
         uses: nicholasgriffintn/github-branch-deployment-action@0.0.1
         env:
           BRANCH: production
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FOLDER: dist
           MESSAGE: 'Build: ({sha}) {msg}'
           REPO: https://github.com/opeolluwa/nitride.git
