--- a/.github/workflows/copycat.yml
+++ b/.github/workflows/copycat.yml
@@ -1,12 +1,18 @@
-- name: Copy views to rest of SSR
-  uses: andstor/copycat-action@v3
-  with:
-    personal_token: ${{ secrets.PERSONAL_TOKEN }}
-    src_path: /.
-    dst_path: /views/
-    dst_owner: opeolluwa
-    dst_repo_name: nitride
-    src_branch: build
-    dst_branch: production
-    clean: true
-    commit_message: "Updated views"
+name: Copy
+on: push
+jobs:
+  copy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Copycat
+      uses: andstor/copycat-action@v3
+      with:
+        personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        src_path: /.
+        dst_path: /views/
+        dst_owner: opeolluwa
+        dst_repo_name: nitride
+        dst_branch: producrion
+        src_branch: build
+        username: opeolluwa
+        commit_message: "updated views"
