--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@capacitor/android": "^4.3.0",
+    "@capacitor/core": "^4.3.0",
     "@vueform/multiselect": "^2.5.6",
     "@vueform/toggle": "^2.1.2",
     "axios": "^0.27.2",
@@ -25,6 +27,7 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@capacitor/cli": "^4.3.0",
     "@iconify/vue": "^4.0.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/dotenv": "^8.2.0",
