--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:ssr": "vite build --outDir views  --emptyOutDir",
     "build:apk": "npm run build && npm run build:sync && npm run build:compile",
     "build:sync": "npx cap sync",
-    "build:compile":"npx cap open android",
+    "build:compile": "npx cap open android",
     "build:icon": "cordova-res --skip-config --copy",
     "dev": "vite",
     "preview": "vite preview --port 4173",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@capacitor/android": "^4.3.0",
     "@capacitor/core": "^4.3.0",
+    "@capacitor/splash-screen": "^4.1.1",
     "@vueform/multiselect": "^2.5.6",
     "@vueform/toggle": "^2.1.2",
     "animate.css": "^4.1.1",
@@ -30,7 +31,8 @@
     "vue-easy-spinner": "^0.1.0",
     "vue-pwa-install": "^1.1.0",
     "vue-router": "^4.1.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-otp-input": "^0.3.6"
   },
   "devDependencies": {
     "@capacitor/cli": "^4.3.0",
