--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "md-editor-v3": "^2.3.0",
     "pinia": "^2.0.21",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.38",
