--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "vue": "^3.2.38",
     "vue-chartjs": "^4.1.1",
     "vue-easy-spinner": "^0.1.0",
+    "vue-intersection-observer": "^0.1.9",
     "vue-pwa-install": "^1.1.0",
     "vue-router": "^4.1.5",
+    "vue-timeago3": "^2.3.0",
     "vue-toastification": "^2.0.0-rc.5",
-    "vue3-otp-input": "^0.3.6"
+    "vue3-otp-input": "^0.3.6",
+    "vue3-timeago": "^1.0.6"
   },
   "devDependencies": {
     "@capacitor/cli": "^4.3.0",
