--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.2.0",
     "md-editor-v3": "^2.3.0",
     "pinia": "^2.0.21",
     "register-service-worker": "^1.7.2",
