--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^1.0.2",
+    "@capacitor-community/sqlite": "^4.2.2",
     "@capacitor/android": "^4.3.0",
     "@capacitor/core": "^4.3.0",
+    "@capacitor/preferences": "^4.0.1",
     "@capacitor/splash-screen": "^4.1.1",
+    "@capacitor/status-bar": "^4.0.1",
     "@growthbunker/vuedarkmode": "^0.5.56",
     "@vueform/multiselect": "^2.5.6",
     "@vueform/toggle": "^2.1.2",
@@ -27,6 +30,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "highlight.js": "^11.6.0",
+    "jeep-sqlite": "^1.6.7",
     "marked": "^4.2.0",
     "md-editor-v3": "^2.3.0",
     "pinia": "^2.0.21",
