--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/push-notifications": "^4.1.1",
     "@capacitor/splash-screen": "^4.1.1",
     "@capacitor/status-bar": "^4.0.1",
+    "@chenfengyuan/vue-countdown": "^2.1.0",
     "@growthbunker/vuedarkmode": "^0.5.56",
     "@vueform/multiselect": "^2.5.6",
     "@vueform/toggle": "^2.1.2",
@@ -36,7 +37,7 @@
     "md-editor-v3": "^2.3.0",
     "pinia": "^2.0.21",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.38",
+    "vue": "^3.2.45",
     "vue-chartjs": "^4.1.1",
     "vue-easy-spinner": "^0.1.0",
     "vue-intersection-observer": "^0.1.9",
