--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-router": "^4.1.5",
     "vue-timeago3": "^2.3.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-google-login": "^2.0.12",
     "vue3-otp-input": "^0.3.6",
     "vue3-timeago": "^1.0.6"
   },
